# game_collection

./: .gitignore  CMakeLists.txt
docs/: games_diagram.drawio
games/breakoutless/include/: breakoutless.h
games/breakoutless/src/: breakoutless.c  breakoutless_collision.c  breakoutless_destroy.c  breakoutless_draw.c  breakoutless_init.c  breakoutless_input.c  breakoutless_update.c
games/tictactoe/include/: ticktactoe.h
games/tictactoe/src/: tictactoe.c  tictactoe_collision.c  tictactoe_destroy.c  tictactoe_draw.c  tictactoe_init.c  tictactoe_input.c  tictactoe_update.c
include/: game_interface.h  game_loop.h  game_selection.h
src/: game_loop.c  game_selection.c  main.c
src/breakoutless/: breakoutless.c
src/spaceship/: spaceship.c
tests/: test_interface.c  test_sdl2.c  test_sdl2_animation.c  test_sdl2_events.c  test_sdl2_image.c
